--- a/projects/data-management-hcml/data-management-pc.ipynb
+++ b/projects/data-management-hcml/data-management-pc.ipynb
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "30570e1e",
    "metadata": {},
    "outputs": [
@@ -2129,7 +2129,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2140,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0e50f67a",
    "metadata": {},
    "outputs": [],
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "994bf980",
    "metadata": {},
    "outputs": [],
@@ -2170,7 +2170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "f86f5f37",
    "metadata": {},
    "outputs": [
@@ -2191,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "675c4a3a",
    "metadata": {},
    "outputs": [],
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d4899c7f",
    "metadata": {},
    "outputs": [
@@ -2230,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "30428481",
    "metadata": {},
    "outputs": [
@@ -2260,7 +2260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "dacbd701",
    "metadata": {},
    "outputs": [],
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6d828937",
    "metadata": {},
    "outputs": [],
@@ -2298,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "5cdffa50",
    "metadata": {},
    "outputs": [],
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "825c7b80",
    "metadata": {},
    "outputs": [
@@ -2342,7 +2342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "bf6f1070",
    "metadata": {},
    "outputs": [],
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "1b1529f8",
    "metadata": {},
    "outputs": [
@@ -2364,7 +2364,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,6 +2372,35 @@
    "source": [
     "df[df['FileType'] == 'unknown']['FileExt'].value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8be97706",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Data berhasil disimpan ke 'data_downloads_cleaned.csv'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simpan ke file CSV\n",
+    "df.to_csv('data_downloads_cleaned.csv', index=False)\n",
+    "# Konfirmasi\n",
+    "print(\"✅ Data berhasil disimpan ke 'data_downloads_cleaned.csv'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b0ff7ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
